--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<nav>
+    <a routerLink = "/dashboard">dashboard</a>
+    <a routerLink = "/heroes">Heroes</a>
+</nav>
+<!-- routerotlet is router directive that is available in appcomponent -->
+<router-outlet></router-outlet>
 <app-messages></app-messages>
+
+
